# agentbox

./: .gitignore  README.md  agentbox.yaml  pyproject.toml
agentbox/: cli.py  compose.py  manifest.py
example/: agentbox.example.yaml  generated-compose.example.yaml
workspace/: brief.md  summarise.py
